--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,7 +12,10 @@
     "@nestjs/common": "^10.3.0",
     "@nestjs/core": "^10.3.0",
     "@nestjs/platform-express": "^10.3.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
